--- a/porttfolio.html
+++ b/porttfolio.html
@@ -168,5 +168,21 @@
                         </svg>
                     </a></li>
                 </ul>
+                
+            </div> 
+            <div >
+                <p class="subscribe">Subscribe</p>
+                <form class="form-footer">
+                    <input type="text" class="input-footer" placeholder="E-mail">
+                    <button type="submit" class="btn-footer"><span>Subscribe</span>
+                        <svg class="subscribe-icon" width="24px" height="20px">
+                            <use href="./images/icons.svg#subskribe-icon"></use>
+                        </svg>
+                    </button>
+                </form>
+
+            </div>
+        </div >          
+    </footer>
 </body>
 </html>
